Specs on a few things. Cleaning up some stuff.