@@ -122,6 +122,15 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.8</version>
+					<configuration>
+						<includes>
+							<include>**/*Test.java</include>
+							<include>**/*Tests.java</include>
+							<include>**/*Spec.java</include>
+							<include>**/*Specs.java</include>
+						</includes>
+						<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512M</argLine>
+					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
